fixed navbar collapse issue, starting styling donationForm

--- a/client/src/assets/scss/nav.scss
+++ b/client/src/assets/scss/nav.scss
@@ -14,10 +14,14 @@ nav {
     height: auto;
 }
 
+#navbarNav {
+    width: 30px;
+}
+
 .appTitle {
     font-family: cursive;
     font-weight: bolder;
-    font-size: xx-large;
+    font-size: x-large;
     text-shadow:
     -1px -1px 0 rgba(255, 255, 255, 0),
     1px 1px 0 rgba(0,0,0,.25),
